Slide 8: Add some TODOs

--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -473,8 +473,6 @@
     \frametitle{Método de Gauss-Newton para la minimización del error}
     \note{Información extraída de https://youtu.be/uHbRKvD8TWg}
     
-    \TODO{especificar metamáticamente estos pasos, sino no se entiende porque hay que linearizar el error. Ni cómo llegamos a construir el sistema lineal ni por qué.}
-    
     \begin{itemize}
         \item Definir la función de error
         \item Linearizar la función de error
@@ -483,9 +481,20 @@
         \item Resolver el sistema lineal
         \item Iterar este procedimiento hasta que converja
     \end{itemize}
-    
-    
+
 \end{frame}
+
+
+\begin{frame}
+    \frametitle{Ejemplo de Mimimización con Gauss-Newton}
+    \note{Información extraída de https://youtu.be/CJE59i8oxIE?si=3RmiP3UM2ImEj-av}
+    
+    \TODO{Ver \url{https://youtu.be/CJE59i8oxIE?si=3RmiP3UM2ImEj-av} para ejemplo de aplicación de Gauss-Newton}
+   
+    
+   
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Linearizar la función de error}
@@ -1148,6 +1157,14 @@
         Una ecuación de error por cada medición (6 en total).\\
         Nuevamente tenemos en cuenta la transformación rígida entre la cámara izquierda y la cámara derecha para las mediciones derechas.}
     
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Bundle Adjustment}
+    
+    \TODO{Agregar BA por Cyrill Stachniss \url{https://youtu.be/sobyKHwgB0Y?si=EqmuOjWNwKBI9jqH} \url{https://youtu.be/LKDLcKrWOIU?si=InRBlf5Nmf7mGM9H}}
+       
 \end{frame}
 
 
