--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -33,6 +33,9 @@
 	
 	\section{SLAM}
 	\input{src/slam.tex}
+    
+    \section{Bundle Adjustment}
+    \input{src/bundle_adjustment.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
