Slide 8: Add least squares image

--- a/teoricas/teorica_08/slides.tex
+++ b/teoricas/teorica_08/slides.tex
@@ -36,6 +36,10 @@
     
     \section{Bundle Adjustment}
     \input{src/bundle_adjustment.tex}
+    
+    
+    \section{Least Squares}
+    \input{src/least_squares.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
