--- a/teoricas/teorica_08/src/bundle_adjustment.tex
+++ b/teoricas/teorica_08/src/bundle_adjustment.tex
@@ -67,7 +67,7 @@
         \item Comenzar con una solución inicial (\emph{inital guess})
         \item Proyectar los puntos 3D estimados en las imágenes de las cámaras estimadas
         \item Comparar ubicaciones de las proyecciones de los puntos 3D con los puntos medidos 2D
-        \item Ajustar para minimizar el error en las imágenes.
+        \item Ajustar para minimizar el error en las imágenes
     \end{itemize}
     
 \end{frame}
