--- a/teoricas/teorica_08/src/slam.tex
+++ b/teoricas/teorica_08/src/slam.tex
@@ -487,9 +487,9 @@
 
 \begin{frame}
     \frametitle{Ejemplo de Mimimización con Gauss-Newton}
-    \note{Información extraída de https://youtu.be/CJE59i8oxIE?si=3RmiP3UM2ImEj-av}
+    \note{Información extraída de https://youtu.be/r2cyMQ5NB1o?si=lRbB_CJmqnsFsktT}
     
-    \TODO{Ver \url{https://youtu.be/CJE59i8oxIE?si=3RmiP3UM2ImEj-av} para ejemplo de aplicación de Gauss-Newton}
+    %\TODO{Ver \url{https://youtu.be/CJE59i8oxIE?si=3RmiP3UM2ImEj-av} para ejemplo de aplicación de Gauss-Newton}
    
     
    
@@ -670,11 +670,11 @@
             \item i-ésimo y j-ésimo bloques de $\linearSystemb_{ij}$
             \item los bloques $ii$, $jj$, $ij$ y $ji$ de $\linearSystemH_{ij}$
         \end{itemize}
-        \item el sistema resultante es disperso
+        \item El sistema resultante es disperso
         \item El sistema se puede computar sumando las contribuciones de cada arista
-        \item Se pueden utilizar diferentes solvers
+        \item Se pueden utilizar diferentes \emph{solvers}
         \begin{itemize}
-            \item Descoposición de Sparse Cholesky
+            \item Descomposición de Sparse Cholesky
             \item Gradiente conjudado
             \item muchos más...
         \end{itemize}
