Slide 8: Add more slides about quadratic form

--- a/teoricas/teorica_08/src/least_squares.tex
+++ b/teoricas/teorica_08/src/least_squares.tex
@@ -307,6 +307,10 @@
     \frametitle{Minimizing the Quadratic Form}
     \note{Extraído de Curso de Cyrill Stachniss https://youtu.be/r2cyMQ5NB1o?si=WYODHSkWun3FL7jR}
     
+    \begin{itemize}
+        \item Derivada de $F\left(\stateBold + \Delta \stateBold \right)$
+    \end{itemize}
+    
 
     
 \end{frame}
